updating send to address now that opsgenie license has expired

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -210,6 +210,12 @@
         color: #ffffff;
     }
 
+    .jumbotron-btn {
+        color:  black;
+        text-shadow: 0.5px 0.5px 1px darkgrey;
+
+    }
+
     .bg-grey {
         background-color: #f6f6f6;
         padding: 60px 50px;
