--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,8 +10,8 @@
         <p class="jumbotron-subheader">Delivering a suite of services and solutions to meet challenges at any layer of the stack.</p>
     </div>
     <div class="container container-fluid">
+        <a href="#services" class="btn btn-default btn-lg"><div class="jumbotron-btn">Explore</div></a>
     </div>
-
 </div>
 
 
